--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>Werewolf.Narrator</mainClass>
+                            <mainClass>Werewolf.Handler</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.8.3_462</version>
+            <version>4.2.0_214</version>
         </dependency>
     </dependencies>
 </project>
